@@ -1,6 +1,7 @@
 Revision history for {{ $dist->name }}
 
 {{$NEXT}}
+  - added undocumented debugging setup
 
 0.010     2012-03-02 12:21:25 America/Boise
   - fix croak when croak_on_err is true
